2004-07-22  Benjamin Otte  <otte@gnome.org>

	* gst/gstelementfactory.c: (gst_element_register):
	  set the factory in the class struct, so gst_element_get_factory
	  actually works
	* gst/parse/grammar.y:
	  set element to playing when it gets unlocked as we can't rely on the
	  bin state - all elements in the bin state might still be locked in
	  NULL)

2004-07-22  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.c: (gst_element_set_state_func):
	  make this a static function

2004-07-22  Wim Taymans  <wim@fluendo.com>

	* gst/schedulers/gstoptimalscheduler.c: (remove_from_group),
	(gst_opt_scheduler_pad_link):
	fix 147894-2 and the group_link problem.

2004-07-22  Wim Taymans  <wim@fluendo.com>

	* testsuite/schedulers/147894-2.c: (queue_empty), (queue_filled),
	(handoff_identity), (main):
	* testsuite/schedulers/147894.c: (queue_empty), (queue_filled),
	(handoff_identity), (main):
	* testsuite/schedulers/Makefile.am:
	* testsuite/schedulers/group_link.c: (main):
	Show bug in scheduler when linking chain and loop based element 
	where the chain based element was not yet in a group.

2004-07-21  Benjamin Otte  <otte@gnome.org>

	* gst/.cvsignore:
	* gst/autoplug/.cvsignore:
	* gst/elements/.cvsignore:
	* gst/indexers/.cvsignore:
	* libs/gst/bytestream/.cvsignore:
	* libs/gst/control/.cvsignore:
	* libs/gst/getbits/.cvsignore:
	* testsuite/states/.cvsignore:
	* testsuite/threads/.cvsignore:
	  keep this up to date, since I seem to be the only one who cares
	  about not missing files on commits

2004-07-21  Benjamin Otte  <otte@gnome.org>

	* gst/gstbin.c: (gst_bin_get_type), (gst_bin_class_init),
	(gst_bin_fix_state), (gst_bin_add_func), (gst_bin_remove_func),
	(gst_bin_child_state_change_func), (set_kid_state_func),
	(gst_bin_set_state), (gst_bin_change_state_norecurse):
	  make state changes work correctly and reentrant (so removing
	  elements from bins during state changes of bins doesn't cause
	  segfaults or even wrong states)